Added IBInspectable for cornerRadius

--- a/SwiftSenpai-ASAuthorizationAppleIDButton-Storyboard/Base.lproj/Main.storyboard
+++ b/SwiftSenpai-ASAuthorizationAppleIDButton-Storyboard/Base.lproj/Main.storyboard
@@ -22,6 +22,11 @@
                                     <constraint firstAttribute="height" constant="46" id="emS-ky-pki"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
