Added IBInspectable for authButtonType

--- a/SwiftSenpai-ASAuthorizationAppleIDButton-Storyboard/Base.lproj/Main.storyboard
+++ b/SwiftSenpai-ASAuthorizationAppleIDButton-Storyboard/Base.lproj/Main.storyboard
@@ -26,6 +26,9 @@
                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                         <real key="value" value="10"/>
                                     </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="authButtonType">
+                                        <integer key="value" value="2"/>
+                                    </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </button>
                         </subviews>
