--- a/SwiftSenpai-ASAuthorizationAppleIDButton-Storyboard/Base.lproj/Main.storyboard
+++ b/SwiftSenpai-ASAuthorizationAppleIDButton-Storyboard/Base.lproj/Main.storyboard
@@ -29,6 +29,9 @@
                                     <userDefinedRuntimeAttribute type="number" keyPath="authButtonType">
                                         <integer key="value" value="2"/>
                                     </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="authButtonStyle">
+                                        <integer key="value" value="2"/>
+                                    </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </button>
                         </subviews>
