Handle button tap action of ASAuthorizationAppleIDButton

--- a/SwiftSenpai-ASAuthorizationAppleIDButton-Storyboard/Base.lproj/Main.storyboard
+++ b/SwiftSenpai-ASAuthorizationAppleIDButton-Storyboard/Base.lproj/Main.storyboard
@@ -30,9 +30,12 @@
                                         <integer key="value" value="2"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="number" keyPath="authButtonStyle">
-                                        <integer key="value" value="2"/>
+                                        <integer key="value" value="1"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gAW-Zx-Km3"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
